@@ -124,6 +124,7 @@ public class WebConfig
         digester.addSetProperties("webconfig/class/fields/fieldconfig", "fieldExpr", "fieldExpr");
         digester.addSetProperties("webconfig/class/fields/fieldconfig", "name", "name");
         digester.addSetProperties("webconfig/class/fields/fieldconfig", "displayer", "displayer");
+        digester.addSetProperties("webconfig/class/fields/fieldconfig", "showInQB", "showInQB");
         digester.addSetProperties("webconfig/class/fields/fieldconfig",
                 "showInListAnalysisPreviewTable", "showInListAnalysisPreviewTable");
         digester.addSetNext("webconfig/class/fields/fieldconfig", "addFieldConfig");
@@ -340,6 +341,7 @@ public class WebConfig
                     fc.setShowInSummary(false);
                     fc.setShowInInlineCollection(false);
                     fc.setShowInResults(false);
+                    fc.setShowInQB(true);
                     classConfig.addFieldConfig(fc);
                 }
                 if (fc.getLabel() == null) {
